<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.payouth.hackathon.vote.ui.register.RegisterFragmentViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp">

        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar"
            binding:toolbarViewModel="@{viewModel.toolbarViewModel}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your personal details for authentication"
            android:textColor="@color/text_grey"
            android:textSize="22dp"
            android:layout_marginTop="30dp"></TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/login_userID">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.idno}">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/login_user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.userName}">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/login_mail_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.mail}">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/login_pwd">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.password}">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:background="@null"-->
<!--                android:hint="@string/login_userID"-->
<!--                android:text="@={viewModel.userName}"-->
<!--                android:textColor="@color/textColor"-->
<!--                android:textColorHint="@color/textColorHint"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_margin="10dp"/>-->

<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@null"-->
<!--                android:hint="@string/login_userID"-->
<!--                android:text="@={viewModel.idno}"-->
<!--                android:textColor="@color/textColor"-->
<!--                android:textColorHint="@color/textColorHint"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_margin="10dp"/>-->

<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@null"-->
<!--                android:hint="@string/login_pwd"-->
<!--                android:text="@={viewModel.password}"-->
<!--                android:textColor="@color/textColor"-->
<!--                android:textColorHint="@color/textColorHint"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_margin="10dp"/>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@mipmap/btn_login"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textAllCaps="false"
                binding:onClickCommand="@{viewModel.registerOnClickCommand}" />
        </LinearLayout>

    </LinearLayout>

</layout>