<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.payouth.hackathon.vote.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/login_back"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/paihangbang" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@mipmap/user_edit"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16sp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@mipmap/user_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/textColorHint" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_userID"
                    android:text="@={viewModel.userName}"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="16sp"
                    binding:onFocusChangeCommand="@{viewModel.onFocusChangeCommand}" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="6dp"
                    android:src="@mipmap/clean_edit"
                    android:visibility="@{viewModel.clearBtnVisibility}"
                    binding:onClickCommand="@{viewModel.clearUserNameOnClickCommand}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/user_edit"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16sp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@mipmap/password_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/textColorHint" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_pwd"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_swich_passwrod"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="6dp"
                    android:src="@mipmap/show_psw_press"
                    binding:onClickCommand="@{viewModel.passwordShowSwitchOnClickCommand}" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:text="@string/login_forgot_pwd"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    binding:onClickCommand="@{viewModel.forgetPasswordOnClickCommand}" />/>
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="8dp"
                    android:text="@string/login_registration"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    binding:onClickCommand="@{viewModel.registerOnClickCommand}" />/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/btn_login"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textAllCaps="false"
                    binding:onClickCommand="@{viewModel.loginOnClickCommand}" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>